validation cors
