# src/main/java/com/sipeip/service/EntityService.java
@@ -3,12 +3,11 @@ package com.sipeip.service;
 import com.sipeip.infrastructure.input.adapter.rest.models.EntityPagedResponse;
 import com.sipeip.infrastructure.input.adapter.rest.models.EntityRequest;
 import com.sipeip.infrastructure.input.adapter.rest.models.EntityResultResponse;
-import com.sipeip.infrastructure.input.adapter.rest.models.EntityUpdateRequest;
 
 public interface EntityService {
     EntityResultResponse createEntity(EntityRequest request);
 
-    EntityResultResponse updateEntity(Integer id, EntityUpdateRequest request);
+    EntityResultResponse updateEntity(Integer id, EntityRequest request);
 
     void deleteEntityById(Integer id);
 
